--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-loader-spinner": "^3.1.5",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
